# Metoring

./: 12_08.ipynb  README.md  environment.yml  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
docs/: mkdocs.yml
german_credit_scoring/: baseline.ipynb
models/model_for_each_store/: model_air_00a91d42b08b08d9.json  model_air_0164b9927d20bcc3.json  model_air_0241aa3964b7f861.json  model_air_0328696196e46f18.json  model_air_034a3d5b40d5b1b1.json  model_air_036d4f1ee7285390.json  model_air_0382c794b73b51ad.json  model_air_03963426c9312048.json  model_air_04341b588bde96cd.json  model_air_049f6d5b402a31b2.json  model_air_04cae7c1bc9b2a0b.json  model_air_0585011fa179bcce.json  model_air_05c325d315cc17f5.json  model_air_0647f17b4dc041c8.json  model_air_064e203265ee5753.json  model_air_066f0221b8a4d533.json  model_air_06f95ac5c33aca10.json  model_air_0728814bd98f7367.json  model_air_0768ab3910f7967f.json  model_air_07b314d83059c4d2.json  model_air_07bb665f9cdfbdfb.json  model_air_082908692355165e.json  (+807 more)
notebooks/: 12_08.ipynb  Untitled.ipynb  baseline.ipynb  eda.ipynb  eval.py  evaluation.ipynb  evaluation_boosting.ipynb  feature engineering.ipynb  model_for_each_series.ipynb  my_splitter.ipynb  my_splitter.py  my_transformer.ipynb  my_transformer.py  pipeline.ipynb  prediction.ipynb  recursive_pipeline.py  skforecast.ipynb  test_my_splitter.py  test_my_transformer.py  test_recursive_pipeline.py  train_xgboost.ipynb
restaurants/: Makefile  dataset.py  features.py  pyproject.toml  tmp.py
(+2382 files in other folders)
